--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
 
     <build>
         <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>test</testSourceDirectory>
         <resources>
             <resource>
                 <filtering>true</filtering>
